{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 44,
  "lineage": "94d1f899-30d0-30bc-db37-982a6c494958",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_allocated_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3659d378ec6a4d3",
            "domain": "vpc",
            "id": "eipalloc-0c3659d378ec6a4d3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-20-123-6.compute-1.amazonaws.com",
            "public_ip": "52.20.123.6",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa477d477703122",
            "arn": "arn:aws:ec2:us-east-1:233489832487:instance/i-07ba96b13191aca8c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ba96b13191aca8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abb18655a0d38c6e",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-3-89-49-240.compute-1.amazonaws.com",
            "public_ip": "3.89.49.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fad3f8cb67e66e97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0893c6c5473a550b7",
            "tags": {
              "Name": "Web-server-1"
            },
            "tags_all": {
              "Name": "Web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa477d477703122",
            "arn": "arn:aws:ec2:us-east-1:233489832487:instance/i-0f8f59637d2ec8f79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8f59637d2ec8f79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04688f00bd8f05fbb",
            "private_dns": "ip-10-0-2-97.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.97",
            "public_dns": "ec2-54-242-43-197.compute-1.amazonaws.com",
            "public_ip": "54.242.43.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b6180023ab60f43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9226c44ce574652",
            "tags": {
              "Name": "Web-server-2"
            },
            "tags_all": {
              "Name": "Web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-2",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fa477d477703122",
            "arn": "arn:aws:ec2:us-east-1:233489832487:instance/i-04a5e5513d05ee5ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a5e5513d05ee5ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e52f9b2dc5dd52b",
            "private_dns": "ip-10-0-3-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.231",
            "public_dns": "ec2-44-198-190-233.compute-1.amazonaws.com",
            "public_ip": "44.198.190.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0022bee7a13094afd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe75bf45db8a4f9e",
            "tags": {
              "Name": "Web-server-3"
            },
            "tags_all": {
              "Name": "Web-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c3635cce2d4803",
              "sg-051ea0848a5a75d3b",
              "sg-0771a7fc0f3c66f9c",
              "sg-0d9285ebb7b978f3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-3",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:internet-gateway/igw-0178b53c2545bac5d",
            "id": "igw-0178b53c2545bac5d",
            "owner_id": "233489832487",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "appl_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:loadbalancer/app/test-lb/12826c137af672d4",
            "arn_suffix": "app/test-lb/12826c137af672d4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-1690559154.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:loadbalancer/app/test-lb/12826c137af672d4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9285ebb7b978f3a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0893c6c5473a550b7"
              },
              {
                "subnet_id": "subnet-0a9226c44ce574652"
              },
              {
                "subnet_id": "subnet-0fe75bf45db8a4f9e"
              }
            ],
            "subnets": [
              "subnet-0893c6c5473a550b7",
              "subnet-0a9226c44ce574652",
              "subnet-0fe75bf45db8a4f9e"
            ],
            "tags": {
              "Environment": "appl-lb"
            },
            "tags_all": {
              "Environment": "appl-lb"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_subnet.Public-1",
            "aws_subnet.Public-2",
            "aws_subnet.Public-3",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:listener/app/test-lb/12826c137af672d4/c3f70e9394752f95",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:listener/app/test-lb/12826c137af672d4/c3f70e9394752f95",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:loadbalancer/app/test-lb/12826c137af672d4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.appl_elb",
            "aws_lb_target_group.elb_tg",
            "aws_security_group.web_server_sg",
            "aws_subnet.Public-1",
            "aws_subnet.Public-2",
            "aws_subnet.Public-3",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
            "arn_suffix": "targetgroup/elb-tg/cec07478352b9bfd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "elb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd-20230615211246657800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
            "target_id": "i-07ba96b13191aca8c"
          },
          "dependencies": [
            "aws_instance.web-server-1",
            "aws_key_pair.deployer",
            "aws_lb_target_group.elb_tg",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd-20230615211257035200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
            "target_id": "i-0f8f59637d2ec8f79"
          },
          "dependencies": [
            "aws_instance.web-server-2",
            "aws_key_pair.deployer",
            "aws_lb_target_group.elb_tg",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-2",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd-20230615211256679200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:233489832487:targetgroup/elb-tg/cec07478352b9bfd",
            "target_id": "i-04a5e5513d05ee5ec"
          },
          "dependencies": [
            "aws_instance.web-server-3",
            "aws_key_pair.deployer",
            "aws_lb_target_group.elb_tg",
            "aws_security_group.web_server_efs_sg",
            "aws_security_group.web_server_ping_sg",
            "aws_security_group.web_server_sg",
            "aws_security_group.web_server_ssh_sg",
            "aws_subnet.Public-3",
            "aws_vpc.Web_env",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "My-NAT-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3659d378ec6a4d3",
            "association_id": "eipassoc-0f28ad0aef6191463",
            "connectivity_type": "public",
            "id": "nat-08e4347522a207765",
            "network_interface_id": "eni-0a4640178179b544f",
            "private_ip": "10.0.1.67",
            "public_ip": "52.20.123.6",
            "subnet_id": "subnet-0893c6c5473a550b7",
            "tags": {
              "Name": "NAT gateway"
            },
            "tags_all": {
              "Name": "NAT gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:route-table/rtb-086692eb92f5d216c",
            "id": "rtb-086692eb92f5d216c",
            "owner_id": "233489832487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08e4347522a207765",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT"
            },
            "tags_all": {
              "Name": "Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:route-table/rtb-063923cd7c04d1efd",
            "id": "rtb-063923cd7c04d1efd",
            "owner_id": "233489832487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0178b53c2545bac5d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124fb03a6b2f3241",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-0e2d5a143652ea9aa"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-1",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081775d908e20669b",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-0b215201be446bcc0"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-2",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d793facfdab968d",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-0f036b890ba9a557e"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-3",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00133cee8862779b0",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-0bd2d7dea68c95930"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-4",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2635997bb8c95bb",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-08610aa37319a3bf3"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-5",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT-Private-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010e8301bcd327546",
            "route_table_id": "rtb-086692eb92f5d216c",
            "subnet_id": "subnet-029a49014ce97b7d0"
          },
          "dependencies": [
            "aws_eip.nat_allocated_ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.My-NAT-gw",
            "aws_route_table.Private_RT",
            "aws_subnet.Private-6",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT-Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091235e1fe925faa6",
            "route_table_id": "rtb-063923cd7c04d1efd",
            "subnet_id": "subnet-0893c6c5473a550b7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public-1",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT-Public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec934f97561d8d4d",
            "route_table_id": "rtb-063923cd7c04d1efd",
            "subnet_id": "subnet-0a9226c44ce574652"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public-2",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT-Public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050162c423ffcd6fb",
            "route_table_id": "rtb-063923cd7c04d1efd",
            "subnet_id": "subnet-0fe75bf45db8a4f9e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public-3",
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:security-group/sg-023c3635cce2d4803",
            "description": "Allows ICMP",
            "egress": [],
            "id": "sg-023c3635cce2d4803",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS mount target",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "233489832487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_efs_mount"
            },
            "tags_all": {
              "Name": "allow_efs_mount"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_ping_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:security-group/sg-0771a7fc0f3c66f9c",
            "description": "Allows ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all incoming ICMP IPv4 traffic",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-0771a7fc0f3c66f9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all incoming ICMP IPv4 traffic",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "icmp_sg",
            "name_prefix": "",
            "owner_id": "233489832487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ping"
            },
            "tags_all": {
              "Name": "allow_ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:security-group/sg-0d9285ebb7b978f3a",
            "description": "Allows HTTP and HTTPS connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9285ebb7b978f3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server",
            "name_prefix": "",
            "owner_id": "233489832487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http\u0026https"
            },
            "tags_all": {
              "Name": "allow_http\u0026https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:security-group/sg-051ea0848a5a75d3b",
            "description": "Allows SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051ea0848a5a75d3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "233489832487",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0e2d5a143652ea9aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2d5a143652ea9aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0b215201be446bcc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b215201be446bcc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0f036b890ba9a557e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f036b890ba9a557e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-3"
            },
            "tags_all": {
              "Name": "Private-3"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0bd2d7dea68c95930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd2d7dea68c95930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-4"
            },
            "tags_all": {
              "Name": "Private-4"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-08610aa37319a3bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08610aa37319a3bf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-5"
            },
            "tags_all": {
              "Name": "Private-5"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-029a49014ce97b7d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029a49014ce97b7d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-6"
            },
            "tags_all": {
              "Name": "Private-6"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0893c6c5473a550b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0893c6c5473a550b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0a9226c44ce574652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9226c44ce574652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:subnet/subnet-0fe75bf45db8a4f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe75bf45db8a4f9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233489832487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-3"
            },
            "tags_all": {
              "Name": "Public-3"
            },
            "vpc_id": "vpc-0abaaa046b2e19dbf"
          },
          "dependencies": [
            "aws_vpc.Web_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Web_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233489832487:vpc/vpc-0abaaa046b2e19dbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059c8da040ea112a7",
            "default_route_table_id": "rtb-0fa856dc59cf0a203",
            "default_security_group_id": "sg-0c22d6593e206b7c5",
            "dhcp_options_id": "dopt-0b6aca6ca0a8e3830",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abaaa046b2e19dbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa856dc59cf0a203",
            "owner_id": "233489832487",
            "tags": {
              "Name": "Web env"
            },
            "tags_all": {
              "Name": "Web env"
            }
          }
        }
      ]
    }
  ]
}